<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">일본어 단어 암기</string>

    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="close">닫기</string>
    <string name="error">오류</string>
    <string name="search">검색</string>
    <string name="update">업데이트</string>
    <string name="unknown_app_version">알 수 없음</string>
    <string name="unknown_vocabulary_db_version">알 수 없음</string>
    <string name="cannot_access_vocabulary_db_storage">사용 가능한 저장장치에 접근할 수 없습니다. 단어 데이터를 읽어들일 수 없습니다.</string>

    <string name="activity_detail_label">상세정보</string>
    <string name="activity_search_list_label">검색</string>
    <string name="activity_environment_setting_label">환경설정</string>

    <string name="av_prev_vocabulary">《</string>
    <string name="av_next_vocabulary">다음 단어 》</string>
    <string name="av_vocabulary_memorize_method_comment">암기 완료 단어는 화면을 꾸~욱 눌러주세요.</string>
    <string name="av_app_terminate_when_back_press">\'뒤로\' 버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="av_search_memorize_vocabulary">암기단어 검색</string>
    <string name="av_rememorize_all">모든 암기대상 단어 재암기</string>
    <string name="av_vocabulary_seekbar_vs">&#160;/&#160;</string>
    <string name="av_vocabulary_memorize_completed">암기완료단어</string>
    <string name="av_vocabulary_memorize_uncompleted">미암기단어</string>

    <string name="av_memorize_completed_ad_title">암기완료</string>
    <string name="av_memorize_completed_ad_message">단어를 암기하셨습니까?</string>
    <string name="av_download_vocabulary_db_on_mobile_network_ad_title">알림</string>
    <string name="av_download_vocabulary_db_on_mobile_network_ad_message">3G 네트워크로 접속되었습니다. 데이터 통화료가 부과될 수 있습니다.\n\n단어 DB를 업데이트하시겠습니까?</string>
    <string name="av_network_disconnected_ad_title">알림</string>
    <string name="av_network_disconnected_ad_message">Wi-Fi/3G등의 데이터 네트워크 상태가 불안정하여 단어 DB의 업데이트 여부를 확인할 수 없습니다.</string>

    <string name="av_updating_vocabulary_db_pd_message">단어 DB를 업데이트하고 있습니다.</string>
    <string name="av_load_failed_vocabulary_db_pd_message">단어 DB의 데이터 로딩이 실패하였습니다.</string>
    <string name="av_load_memorize_target_vocabulary_pd_message">암기 할 단어를 불러오고 있습니다.\n잠시만 기다려주세요.</string>
    <string name="av_latest_checking_vocabulary_db_pd_message">단어 DB의 업데이트 여부를 확인하는 중 입니다.</string>
    <string name="av_memorize_settings_vocabulary_pd_message">요청하신 작업을 처리 중입니다.</string>

    <string name="av_update_failed_vocabulary_db_message">새로운 단어 DB의 업데이트가 실패하였습니다.</string>
    <string name="av_update_failed_vocabulary_db_reason_crc_checkerror_message">새로운 단어 DB의 업데이트가 실패하였습니다(에러 : 유효하지 않은 단어 DB 파일).</string>

    <string name="vvui_dialog_title">업데이트 정보</string>

    <string name="avsl_search">단어검색</string>
    <string name="avsl_sort">정렬</string>
    <string name="avsl_sort_vocabulary">한자</string>
    <string name="avsl_sort_vocabulary_gana">히라가나/가타카나</string>
    <string name="avsl_sort_vocabulary_translation">뜻</string>
    <string name="avsl_search_progress_message">단어를 검색 중입니다.</string>
    <string name="avsl_sort_progress_message">전체 리스트를 정렬중입니다.</string>
    <string name="avsl_memorize_settings_vocabulary_progress_message">요청하신 작업을 처리 중입니다.</string>
    <string name="avsl_search_result_settings">암기상태 변경</string>
    <string name="avsl_search_result_vocabulary_rememorize_all">검색된 단어 재암기</string>
    <string name="avsl_search_result_vocabulary_memorize_completed_all">검색된 단어 암기완료</string>
    <string name="avsl_search_result_vocabulary_memorize_target_all">검색된 단어 암기대상 설정</string>
    <string name="avsl_search_result_vocabulary_memorize_target_cancel_all">검색된 단어 암기대상 해제</string>
    <string name="avsl_exclude_vocabulary">검색목록에서 제외</string>
    <string name="avsl_memorize_settings_vocabulary_ad_title">검색된 단어 암기대상 설정</string>
    <string name="avsl_memorize_settings_vocabulary_ad_message">검색결과에 포함되지 않은 단어들은 암기대상을 해제하시겠습니까?\n\n(예)를 누르시면 검색된 단어는 암기대상으로, 검색결과에 포함되지 않은 단어들은 암기대상을 해제합니다.\n\n(아니오)를 누르시면 검색된 단어만 암기대상으로 만듭니다.</string>
    <string name="avsl_empty_search_result_list_vocabulary">검색된 단어가 없습니다.</string>
    <string name="avsl_vocabulary_search_result_count">검색결과 : %1$d개</string>
    <string name="avsl_vocabulary_search_result_count_empty">검색결과 : 0개</string>
    <string name="avsl_vocabulary_memorize_count_info">전체 %1$d개중 암기완료/암기대상 : %2$d개/%3$d개</string>
    <string name="avsl_vocabulary_memorize_count_info_empty">전체 0개중 암기완료/암기대상 : 0개/0개</string>

    <string name="avsl_search_condition_select_text">선택</string>
    <string name="avsl_search_condition_search_word">검색어</string>
    <string name="avsl_search_condition_search_word_hint">검색어를 입력하세요.</string>
    <string name="avsl_search_condition_search_target">검색대상</string>
    <string name="avsl_search_condition_jlpt_rating">JLPT 급수</string>

    <string name="avsli_memorize_target">암기대상</string>
    <string name="avsli_memorize_completed">암기완료</string>
    <string name="avsli_memorize_completed_count">총 %d회 암기완료</string>

    <string name="avd_vocabulary">한자</string>
    <string name="avd_vocabulary_gana">히라가나/가타카나</string>
    <string name="avd_vocabulary_translation">뜻</string>
    <string name="avd_vocabulary_detail_description">상세설명</string>
    <string name="avd_vocabulary_example">예문</string>
    <string name="avd_vocabulary_memorize_target">암기대상</string>
    <string name="avd_vocabulary_memorize_untarget">암기비대상</string>
    <string name="avd_vocabulary_memorize_completed">암기완료단어</string>
    <string name="avd_vocabulary_memorize_uncompleted">미암기단어</string>
    <string name="avd_nofind_vocabulary_detail_info">단어의 상세정보를 얻을 수 없습니다.</string>
    <string name="avd_rememorize_vocabulary">다시 암기하기</string>
    <string name="avd_memorize_completed_vocabulary">암기완료</string>
    <string name="avd_add_vocabulary_memorize_target">암기대상 목록에 추가</string>
    <string name="avd_remove_vocabulary_memorize_target">암기대상 목록에서 제거</string>

    <string name="as_vocabulary_memorize_setting_category">단어 암기 설정</string>
    <string name="as_vocabulary_update_setting_category">단어 업데이트 설정</string>
    <string name="as_app_info_category">프로그램 정보</string>

    <string name="as_vocabulary_memorize_target_key">jv_memorize_target_item</string>
    <string name="as_vocabulary_memorize_target_title">암기대상 설정</string>
    <string name="as_vocabulary_memorize_target_summary">단어를 암기할 때 암기 대상이 되는(화면에 출력이 되는) 문자를 지정합니다.</string>
    <string name="as_vocabulary_memorize_target_dialog_title">암기대상 문자</string>
    <string name="as_show_vocabulary_translation_key">jv_show_vocabulary_translation</string>
    <string name="as_show_vocabulary_translation_title">단어 암기시 뜻 보이기</string>
    <string name="as_show_vocabulary_translation_summary_on">암기 대상 단어가 나타나는 아랫부분에 단어의 뜻을 보여줍니다.</string>
    <string name="as_show_vocabulary_translation_summary_off">암기 대상 단어가 나타나는 아랫부분에 단어의 뜻을 보이지 않습니다.</string>
    <string name="as_fade_effect_on_next_vocabulary_key">jv_fade_effect_next_vocabulary</string>
    <string name="as_fade_effect_on_next_vocabulary_title">단어 전환시 페이드효과 적용</string>
    <string name="as_fade_effect_on_next_vocabulary_summary_on">다음 암기 대상 단어가 나타날 때 페이드 효과를 적용합니다.</string>
    <string name="as_fade_effect_on_next_vocabulary_summary_off">다음 암기 대상 단어가 나타날 때 페이드 효과를 적용하지 않습니다.</string>
    <string name="as_vibrate_on_next_vocabulary_key">jv_vibrate_next_vocabulary</string>
    <string name="as_vibrate_on_next_vocabulary_title">단어 전환시 진동 발생</string>
    <string name="as_vibrate_on_next_vocabulary_summary_on">다음 암기 대상 단어가 나타날 때 스마트폰에 진동을 발생시킵니다.</string>
    <string name="as_vibrate_on_next_vocabulary_summary_off">다음 암기 대상 단어가 나타날 때 스마트폰에 진동을 발생시키지 않습니다.</string>
    <string name="as_vocabulary_memorize_order_key">jv_memorize_order_method</string>
    <string name="as_vocabulary_memorize_order_title">단어 암기순서</string>
    <string name="as_vocabulary_memorize_order_summary">단어를 암기할 때 암기대상 단어가 화면에 나타나는 순서를 지정합니다.</string>
    <string name="as_vocabulary_memorize_order_dialog_title">단어 암기순서</string>

    <string name="as_vocabulary_update_on_started_key">jv_vocabulary_update_on_started</string>
    <string name="as_vocabulary_update_on_started_title">프로그램 시작시 단어DB 업데이트</string>
    <string name="as_vocabulary_update_on_started_summary_on">프로그램 시작시에 단어 DB를 최신버전으로 업데이트합니다.</string>
    <string name="as_vocabulary_update_on_started_summary_off">프로그램 시작시에 단어 DB를 최신버전으로 업데이트하지 않습니다.</string>

    <string name="as_app_info_key">jv_program_info</string>
    <string name="as_app_info_title">프로그램 정보</string>
    <string name="as_developer_info_title">개발자에게 메일보내기</string>
    <string name="as_developer_info_summary">DarkKaiser\ndarkkaiser78@hotmail.com</string>

</resources>
