<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto">

	<item
		android:title="@string/avsl_sort"
		android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:orderInCategory="0"
        myapp:showAsAction="ifRoom"
        >
		<menu>
			<item 
				android:id="@+id/avsl_sort_vocabulary_hanja"
				android:title="@string/avsl_sort_vocabulary_hanja"
                />
			<item 
				android:id="@+id/avsl_sort_vocabulary_translation"
				android:title="@string/avsl_sort_vocabulary_translation"
                />
			<item 
				android:id="@+id/avsl_sort_vocabulary_gana"
				android:title="@string/avsl_sort_vocabulary_gana"
                />
		</menu>
	</item>
    <!-- @@@@@ -->
	<item
		android:title="검색된 전체 단어 암기 설정"
		android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="1"
        myapp:showAsAction="never"
        >
		<menu>
			<item 
				android:id="@+id/avsl_rememorize_all"
				android:title="재암기하기"
                />
			<item 
				android:id="@+id/avsl_memorize_completed_all"
				android:title="암기 완료 상태 만들기"
                />
			<item 
				android:id="@+id/avsl_make_memorize_target_all"
				android:title="암기 대상 상태 만들기..."
                />
			<item 
				android:id="@+id/avsl_memorize_target_cancel_all"
				android:title="암기 대상 상태 해제하기"
                />
		</menu>
	</item>
	<item
		android:id="@+id/avsl_open_settings_activity"
		android:icon="@android:drawable/ic_menu_preferences"
		android:title="@string/activity_environment_setting_label"
        android:orderInCategory="2"
        myapp:showAsAction="never"
        />

</menu>
