<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    android:clickable="true"
    >
	<ScrollView
        android:id="@+id/avd_vocabulary_detail_info_panel"
	   	android:layout_width="match_parent"
	   	android:layout_height="match_parent"
	   	android:scrollbarStyle="outsideOverlay"
	   	>
		<LinearLayout 
		    android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
	    	<RelativeLayout
	    		android:layout_width="match_parent"
	    		android:layout_height="wrap_content"
	    		android:background="@color/avd_item_title_background"
	    		>
		    	<TextView 
                    android:text="@string/avd_vocabulary_hanja"
                    style="@style/VocabularyDetailTitle"
                    />
                <TextView
                    android:id="@+id/avd_memorize_completed_count_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/avd_memorize_completed_count"
                    android:textSize="15dp"
                    tools:ignore="SpUsage"
                    />
	    	</RelativeLayout>
	    	<RelativeLayout
	    		android:layout_width="match_parent"
	    		android:layout_height="wrap_content"
	    		android:background="@color/avd_item_content_background"
	    		>
				<TextView
					android:id="@+id/avd_vocabulary"
                    style="@style/VocabularyDetailContent"
                    />
                <TextView
                    android:id="@+id/avd_memorize_uncompleted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/avd_vocabulary_memorize_uncompleted"
                    android:textColor="@color/avd_memorize_uncompleted"
                    android:textSize="15dp"
                    tools:ignore="SpUsage"
                    />
	    	</RelativeLayout>
			<TextView
                android:text="@string/avd_vocabulary_gana"
                style="@style/VocabularyDetailTitle"
                />
			<TextView
				android:id="@+id/avd_vocabulary_gana"
                style="@style/VocabularyDetailContent"
                />
			<TextView 
		    	android:text="@string/avd_vocabulary_translation"
                style="@style/VocabularyDetailTitle"
                />
			<TextView
				android:id="@+id/avd_vocabulary_translation"
                style="@style/VocabularyDetailContent"
                />
			<TextView 
		    	android:text="@string/avd_vocabulary_detail_description"
                style="@style/VocabularyDetailTitle"
		    	/>
			<TextView
				android:id="@+id/avd_vocabulary_detail_info"
                style="@style/VocabularyDetailContent"
                />
			<TextView 
		    	android:text="@string/avd_vocabulary_example"
                style="@style/VocabularyDetailTitle"
		    	/>
			<TextView
				android:id="@+id/avd_vocabulary_example"
                style="@style/VocabularyDetailContent"
                android:textSize="15dp"
                tools:ignore="SpUsage"
                />
		</LinearLayout>
	</ScrollView>
	<RelativeLayout
		android:id="@+id/avd_move_vocabulary_button_panel"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        >
	    <ImageButton
			android:id="@+id/avd_prev_vocabulary"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
	    	android:src="@drawable/avd_prev_vocabulary_button"
	    	android:background="#00000000"
            android:contentDescription="@null"
            />
	    <ImageButton
			android:id="@+id/avd_next_vocabulary"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
	    	android:src="@drawable/avd_next_vocabulary_button"
	    	android:background="#00000000"
            android:contentDescription="@null"
            />
	</RelativeLayout>
</RelativeLayout>
