<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
   	android:layout_height="match_parent"
   	android:scrollbarStyle="insideOverlay"
   	>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:padding="10dp"
        >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            >
            <TextView
                android:text="@string/avsl_search_condition_search_word"
                android:textSize="16dp"
                android:paddingLeft="0dp"
                android:paddingRight="5dp"
                android:gravity="right"
                tools:ignore="SpUsage"
                />
            <EditText
                android:id="@+id/avsl_search_condition_search_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/avsl_search_condition_search_word_hint"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            >
            <TextView
                android:text="@string/avsl_search_condition_memorize_target"
                android:textSize="16dp"
                android:paddingLeft="0dp"
                android:paddingRight="5dp"
                android:gravity="right"
                tools:ignore="SpUsage"
                />
            <Spinner
                android:id="@+id/avsl_search_condition_memorize_target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/avsl_search_condition_select_text"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            >
            <TextView
                android:text="@null"
                android:textSize="16dp"
                android:paddingLeft="0dp"
                android:paddingRight="5dp"
                android:gravity="right"
                tools:ignore="SpUsage"
                />
            <Spinner
                android:id="@+id/avsl_search_condition_memorize_completed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/avsl_search_condition_select_text"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:text="@string/avsl_search_condition_jlpt_rating"
                android:textSize="16dp"
                android:paddingLeft="0dp"
                android:paddingRight="5dp"
                android:gravity="right"
                tools:ignore="SpUsage"
                />
            <kr.co.darkkaiser.jv.view.widgets.MultiChoiceSpinner
                android:id="@+id/avsl_search_condition_jlpt_ranking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/avsl_search_condition_select_text"
                />
        </TableRow>
    </TableLayout>
</ScrollView>
